Lua版本实现以兼容旧版OpenWrt

--- a/root/usr/share/rpcd/acl.d/luci-app-tailscale.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-tailscale.json
@@ -1,18 +1,20 @@
 {
 	"luci-app-tailscale": {
-		"description": "Grant access to Tailscale configuration",
+		"description": "Grant access to Tailscale configuration (Lua version)",
 		"read": {
 			"file": {
-				"/sbin/ip -s -j ad": [ "exec" ],
+				"/sbin/ip -s -j addr": [ "exec" ],
 				"/sbin/logread -e tailscale": [ "exec" ],
 				"/usr/sbin/tailscale status --json": [ "exec" ],
 				"/usr/sbin/tailscale login": [ "exec" ],
-				"/usr/sbin/tailscale logout": [ "exec" ]
+				"/usr/sbin/tailscale logout": [ "exec" ],
+				"/usr/sbin/tailscale": [ "exec" ]
 			},
 			"ubus": {
 				"service": [ "list" ]
 			},
-			"uci": [ "tailscale" ]
+			"uci": [ "tailscale" ],
+			"cgi-io": [ "exec" ]
 		},
 		"write": {
 			"uci": [ "tailscale" ]
