--- a/root/usr/share/luci/menu.d/luci-app-tailscale.json
+++ b/root/usr/share/luci/menu.d/luci-app-tailscale.json
@@ -14,7 +14,7 @@
 		"title": "Global Settings",
 		"order": 10,
 		"action": {
-			"type": "view",
+			"type": "cbi",
 			"path": "tailscale/setting"
 		}
 	},
@@ -22,7 +22,7 @@
 		"title": "Interface Info",
 		"order": 20,
 		"action": {
-			"type": "view",
+			"type": "cbi",
 			"path": "tailscale/interface"
 		}
 	},
@@ -30,7 +30,7 @@
 		"title": "Logs",
 		"order": 30,
 		"action": {
-			"type": "view",
+			"type": "cbi",
 			"path": "tailscale/log"
 		}
 	}
